--- a/app/partials/key_solution.html
+++ b/app/partials/key_solution.html
@@ -52,7 +52,7 @@
 </div>
 	<div class="more" style="display:none" id="more_button"  data-switch='on' ng-click="more($event)">
 		<span>查看更多</span>
-		<div class="icon-arrow"></div>'
+		<div class="icon-arrow"></div>
 	</div>
 
 <div class="contents">方案内容</div>
