simple auto commit

--- a/app/partials/userinfo_new.html
+++ b/app/partials/userinfo_new.html
@@ -19,14 +19,10 @@
 	<div id="ageContainer"></div>
 	<div class="age">年收入<span class="blue" id="yearIncomeId">0</span><span class="blue">万</span></div>
     <div id="yearIncome"></div>
-	<!-- <div class="age-container" id="slider-container">
-		<div id="bg" style="left:0px;"></div>
-		<div id="pointer" class="needle" ><a></a></div>
-	</div> -->
 </div>
 <div class="target_btn" ng-click="goHobby()">下一步</div>
 
-<script type="text/javascript" src="js/ageComponent.js?rev=sdfsdsdfsd"></script>
+<script type="text/javascript" src="/js/ageComponent.js?rev=sdfafasafafadsdfsd"></script>
 <script type="text/javascript">
 	var ageComponent = new AgeComponent({containerId:"ageContainer",minAge: 25,maxAge: 50,startAge: 30,yearDis: 7.5,changeCallback:function(age){
  			$("#ageId").html(age);
