simple auto commit

--- a/app/partials/userinfo_new.html
+++ b/app/partials/userinfo_new.html
@@ -22,7 +22,7 @@
 </div>
 <div class="target_btn" ng-click="goHobby()">下一步</div>
 
-<script type="text/javascript" src="/js/ageComponent.js?rev=sdfafasafafadsdfsd"></script>
+<script type="text/javascript" src="/js/agecommon.js?rev=sdfafasafafadsdfsd"></script>
 <script type="text/javascript">
 	var ageComponent = new AgeComponent({containerId:"ageContainer",minAge: 25,maxAge: 50,startAge: 30,yearDis: 7.5,changeCallback:function(age){
  			$("#ageId").html(age);
