--- a/app/partials/target.html
+++ b/app/partials/target.html
@@ -1,7 +1,7 @@
-<!-- <link rel="stylesheet" href="css/ensuring_target.css?rev=b69506aad0580df20d9a90405ad88437"> -->
+<link rel="stylesheet" href="css/ensuring_target.css?rev=3d6c009b82beaf6bf352dd8981713783">
 <div class="target_ctrl">
 	<div class="who">为谁投保？</div>
-	<div class="first">建议优先保障家庭收入最高者</div>
+	<div class="first">建议优先保障家庭收入的主要贡献者</div>
 	<div class="relation" id="relation">
 		<div class="column">
 			<div class="column_btn blue" data-relation="1">自 己</div>
