--- a/app/partials/hobby.html
+++ b/app/partials/hobby.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="css/preference.css?rev=d7ff41c359d1a5aebdbe92b81746493e">
-<!-- <link rel="stylesheet" href="css/preference.css?rev=d7ff41c359d1a5aebdbe92b81746493e"> -->
+<!-- <link rel="stylesheet" href="css/preference.css?rev=safsdfsdf"> -->
 <div class="hobby">
 	<div class="piont">保障偏好</div>
 	<label class="switch needsclick">
