--- a/app/partials/userinfo_new.html
+++ b/app/partials/userinfo_new.html
@@ -15,9 +15,9 @@
 		<span class="switch-label one needsclick" data-on="男" data-off="女"></span> 
 		<span class="switch-hand"></span> 
 	</label>
-	<div class="age">年 龄<span class="blue" id="ageId">0</span><span class="blue">岁</span></div>
+	<div class="age">年 龄<span class="blue" id="ageId" style="font-size: 18px;">0</span><span class="blue" style="margin:0;padding:0;">岁</span></div>
 	<div id="ageContainer"></div>
-	<div class="age">年收入<span class="blue" id="yearIncomeId">0</span><span class="blue">万</span></div>
+	<div class="age">年收入<span class="blue" id="yearIncomeId" style="font-size: 18px;">0</span><span class="blue" style="margin:0;padding:0;">万</span></div>
     <div id="yearIncome"></div>
 </div>
 <div class="target_btn" ng-click="goHobby()">下一步</div>
