--- a/app/css/scheme.css
+++ b/app/css/scheme.css
@@ -42,7 +42,34 @@
   .scheme-contrller .scheme_word {
     padding: 20px 20px 30px 20px;
     font-size: 13px;
+    position: relative;
     line-height: 25px; }
+    .scheme-contrller .scheme_word::after {
+      pointer-events: none;
+      position: absolute;
+      z-index: 999;
+      top: 0;
+      left: 0;
+      content: "\0020";
+      border-color: #ccc;
+      border-style: solid;
+      border-width: 0 0 1px 0;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      -webkit-transform-origin: 0 0;
+      transform-origin: 0 0; }
+      @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+        .scheme-contrller .scheme_word::after {
+          width: 200%;
+          height: 200%;
+          -webkit-transform: scale(0.5);
+          transform: scale(0.5); } }
+      @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+        .scheme-contrller .scheme_word::after {
+          width: 200%;
+          height: 200%;
+          -webkit-transform: scale(1/3);
+          transform: scale(1/3); } }
   .scheme-contrller .main-contrller .main-head {
     font-size: 18px;
     height: 59.5px;
@@ -121,41 +148,40 @@
       color: #999;
       font-size: 13px;
       line-height: 20px; }
-  .scheme-contrller .main-contrller .main_word::last-child {
-    border-bottom: none; }
-  .scheme-contrller .main-contrller:before {
-    height: 10px;
-    background: red; }
-  .scheme-contrller .marBtn {
-    height: 10px;
-    background: #f5f5f5;
+  .scheme-contrller .main-contrller .main_word:not(:last-child) {
     position: relative; }
-    .scheme-contrller .marBtn::after {
+    .scheme-contrller .main-contrller .main_word:not(:last-child)::after {
       pointer-events: none;
       position: absolute;
       z-index: 999;
       top: 0;
       left: 0;
       content: "\0020";
-      border-color: #e2e2e2;
+      border-color: #ccc;
       border-style: solid;
-      border-width: 1px 0 0 0;
+      border-width: 0 0 1px 0;
       -webkit-box-sizing: border-box;
       box-sizing: border-box;
       -webkit-transform-origin: 0 0;
       transform-origin: 0 0; }
       @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-        .scheme-contrller .marBtn::after {
+        .scheme-contrller .main-contrller .main_word:not(:last-child)::after {
           width: 200%;
           height: 200%;
           -webkit-transform: scale(0.5);
           transform: scale(0.5); } }
       @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
-        .scheme-contrller .marBtn::after {
+        .scheme-contrller .main-contrller .main_word:not(:last-child)::after {
           width: 200%;
           height: 200%;
           -webkit-transform: scale(1/3);
           transform: scale(1/3); } }
+  .scheme-contrller .main-contrller:before {
+    height: 10px;
+    background: red; }
+  .scheme-contrller .marBtn {
+    height: 10px;
+    background: #f5f5f5; }
 .scheme_btn {
   width: 100%;
   height: 49px;
