--- a/app/css/solution.css
+++ b/app/css/solution.css
@@ -46,13 +46,28 @@ body {
       height: 30px;
       box-sizing: border-box;
       width: 70px;
-      border: 1px solid #ccc;
       border-radius: 5px;
       font-size: 13px;
       line-height: 30px;
       text-align: center;
       color: #006ee9;
-      font-weight: normal; }
+      font-weight: normal;
+      position: relative; }
+    .key_head .model .anew:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      width: 200%;
+      height: 200%;
+      -webkit-transform: scale(0.5);
+      transform: scale(0.5);
+      -webkit-transform-origin: left top;
+      transform-origin: left top; }
   .key_head .wz {
     padding: 10px 0;
     line-height: 20px; }
@@ -143,8 +158,34 @@ body {
   background-color: #fff;
   height: 45px;
   line-height: 45px;
-  border-bottom: 1px solid #e2e2e2;
+  position: relative;
   font-size: 15px; }
+  .contents::after {
+    pointer-events: none;
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    content: "\0020";
+    border-color: #e2e2e2;
+    border-style: solid;
+    border-width: 0 0 1px 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0; }
+    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      .contents::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5); } }
+    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+      .contents::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(1/3);
+        transform: scale(1/3); } }
 .solution {
   background-color: #FFF;
   padding-top: 5px;
