--- a/app/css/userinfo_new.css
+++ b/app/css/userinfo_new.css
@@ -157,6 +157,7 @@ body {
     top: 23px;
     color: #999; }
 .target_btn {
+  position: relative;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -166,5 +167,30 @@ body {
   color: #fff;
   text-align: center;
   line-height: 49px;
-  font-size: 15px;
-  border-top: 1px solid #ccc; }
+  font-size: 15px; }
+  .target_btn::after {
+    pointer-events: none;
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    content: "\0020";
+    border-color: #e2e2e2;
+    border-style: solid;
+    border-width: 1px 0 0 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0; }
+    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      .target_btn::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5); } }
+    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+      .target_btn::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(1/3);
+        transform: scale(1/3); } }
