--- a/app/sass/scheme.scss
+++ b/app/sass/scheme.scss
@@ -24,6 +24,7 @@
 		padding: 20px 20px 30px 20px;
 		font-size: 13px;
 		// border-bottom: 1px solid #ccc;
+		@include border(0 0 1px 0,#ccc);
 		line-height: 25px;
 	}
 
@@ -60,8 +61,8 @@
 				line-height: 20px;
 			}
 		}
-		.main_word::last-child {
-			border-bottom: none;
+		.main_word:not(:last-child) {
+			@include border(0 0 1px 0,#ccc);
 		}
 	}
 	.main-contrller:before {
@@ -71,7 +72,7 @@
 	.marBtn {
 		height: 10px;
 		background: #f5f5f5;
-		@include border(1px 0 0 0,#e2e2e2);
+		// @include border(1px 0 0 0,#e2e2e2);
 	}
 }
 .scheme_btn {
@@ -79,7 +80,8 @@
 	height: 49px;
 	background: #006ee9;
 	font-size: 15px;
-	color: #fff;@include border(1px 0 0 0,#e2e2e2);
+	color: #fff;
+	@include border(1px 0 0 0,#e2e2e2);
 	line-height: 49px;
 	text-align: center;
 	position: fixed;
