simple auto commit

--- a/app/template/new/product_145.html
+++ b/app/template/new/product_145.html
@@ -8,7 +8,7 @@
 		<div class="introd-container">
 			<div class="detail-container">
 			  <div>
-				<img src="img/product/zyseyw01.png" ></div>
+				<img src="img/product/dtbtkmjz.png" ></div>
 			</div>
 		</div>
 		<!--
