simple auto commit

--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -1,9 +1,18 @@
-<!-- <link rel="stylesheet" href="wx_share/css/index.css?rev=10ee93e35caeab6c5d3d7b887c5c5efb"> -->
+<link rel="stylesheet" href="wx_share/css/index.css?rev=10ee93e35caeab6c5d3d7b887c5c5efb">
 <div class="my_bd_controller">
-	<ul class="layout ul_contrl">
+	<ul class="layout ul_contrl" ng-show="qd!='mocup'">
 		<li >
 			<p>诺贝保险管家</p>
 			<p>助您出行无忧</p>
+		</li>
+		<li></li>
+		<li></li>
+	</ul >
+
+	<ul class="layout ul_contrl"  ng-show="qd=='mocup'">
+		<li >
+			<p>MO CUP & 诺贝</p>
+			<p>送给<strong>War3</strong>爱好者的福利</p>
 		</li>
 		<li></li>
 		<li></li>
