simple auto commit

--- a/app/wx_share/partials/jixian.html
+++ b/app/wx_share/partials/jixian.html
@@ -42,10 +42,10 @@
 			
 		</div>
 			
-		<a class="else_but" onclick="_hmt.push(['_trackEvent', 'wx_share_jixian', 'wx_share_jixian_rests'])" href="/#list?from=jixian">其他高保额极限运动险</a>
+		<a class="else_but" onclick="_hmt.push(['_trackEvent', 'wx_share_jixian', 'wx_share_jixian_rests'])" href="/#temailist?from=jixian">其他高保额极限运动险</a>
 		<div class="kong_div"></div>
 		<div class="padding_img">
-			<a onclick="_hmt.push(['_trackEvent', 'wx_share_jixian', 'wx_share_jixian_plan1'])" href="/#list?from=jixian" href="/#temaidetail?product_id=94&from=jixian">
+			<a onclick="_hmt.push(['_trackEvent', 'wx_share_jixian', 'wx_share_jixian_plan1'])"  href="/#temaidetail?product_id=94&from=jixian">
 				<div class="churchyard">
 				<img src="wx_share/img/sports/churchyard.png">
 				<div class="churchyard_word">
