--- a/app/partials/bz_ts.html
+++ b/app/partials/bz_ts.html
@@ -33,14 +33,14 @@
 				<div class="change_word">先保重疾，再补充医疗报销</div>
 			</div>
 		</div>
-		<div class="main_word" ng-click="goContinue()">
+		<div class="main_word" ng-click="goContinue(1)">
 			<div class="logo_ctrl"><img class="left" style="width: 30px;vertical-align: middle;" src="img/promote/ren.png"></div>
 			<div class="main_l left">
 				<div class="main_head">家庭保障</div>
 				<div class="change_word">先保收入支柱，再保老人小孩</div>
 			</div>
 		</div>
-		<div class="main_word" ng-click="goContinue()">
+		<div class="main_word" ng-click="goContinue(2)">
 			<div class="logo_ctrl"><img class="left" style="width: 30px;vertical-align: middle;" src="img/promote/money.png"></div>
 			<div class="main_l left">
 				<div class="main_head">财产保障</div>
