--- a/app/partials/scheme.html
+++ b/app/partials/scheme.html
@@ -4,7 +4,7 @@
 	
 	<div class="main-contrller">
 		<div class="scheme-head">{{data.scheme_name}}</div>
-		<div class="img_ctrl"><img ng-src="{{data.model_image_url}}"></div>
+		<div class="img_ctrl"><img error-src="img/scheme/loading.png" ng-src="{{data.model_image_url}}"></div>
 		<div class="scheme_word">{{data.description}}</div>
 		<div class="marBtn"></div>
 	</div>
