--- a/app/partials/userinfo_new.html
+++ b/app/partials/userinfo_new.html
@@ -6,13 +6,13 @@
 	<div class=" highest">是否家庭收入主要贡献者</div>
 	<label class="switch needsclick">
 		<input class="switch-input primary_income needsclick" type="checkbox" />
-		<span class="switch-label needsclick" data-on="是" data-off="否"></span> 
+		<span class="switch-label needsclick" data-on="是" data-off="否" ng-click="yes_no"></span> 
 		<span class="switch-handl-off"></span> 
 	</label>
 	<div class="sex">性别</div>
 	<label class="switch needsclick">
 		<input class="switch-input sex needsclick" type="checkbox" />
-		<span class="switch-label one needsclick" data-on="男" data-off="女"></span> 
+		<span class="switch-label one needsclick" data-on="男" data-off="女" ng-click="sex"></span> 
 		<span class="switch-hand"></span> 
 	</label>
 	<div class="age">年 龄<span class="blue" id="ageId" style="font-size: 18px;">0</span><span class="blue" style="margin:0;padding:0;">岁</span></div>
@@ -21,8 +21,3 @@
     <div id="yearIncome"></div>
 </div>
 <div class="target_btn" ng-click="goHobby()">下一步</div>
-
-
-<script type="text/javascript">
-	
-</script>
