simple auto commit

--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -44,7 +44,7 @@
 				<span id="money_score" class="score">0</span>
 				<span class="danwei">万</span>
 			</div>
-			<div  style="font-size:15px;color:#999;display: inline-block;margin-left: 20px;" ng-if="type==4 || type ==3">
+			<div  style="font-size:15px;color:#999;display: inline-block;margin-left: 20px;" ng-if="type==4 ">
 			保1年
 	        </div>
 			<span class="intell-reck" ng-click="showIntellReckon()" ng-if="type==4" >智能测算</span>
