--- a/app/sass/bz_ts.scss
+++ b/app/sass/bz_ts.scss
@@ -205,6 +205,10 @@
 				width: 30px;
 				box-sizing: border-box;
 				padding-top: 3px;
+				i {
+					font-size:30px;
+					line-height: 30px;
+				}
 			}
 			.main_head {
 				font-size: 16px;
