--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -49,14 +49,15 @@ body {
 	}
 	.wz {
 		padding: 10px 0;
-		line-height: 20px
+		line-height: 20px;
 	}
 	.fa {
 		color: #999;
 	}
-	img {
-		width: 15px;
-		vertical-align: -3px;
+	i {
+		font-size: 18px;
+		vertical-align: -2px;
+		color: #55a5ff;
 	}
 	text-align: top;
 }
