--- a/app/css/scheme.css
+++ b/app/css/scheme.css
@@ -35,10 +35,23 @@
           height: 200%;
           -webkit-transform: scale(1/3);
           transform: scale(1/3); } }
-  .scheme-contrller .img_ctrl img {
-    width: 100%;
-    border: none;
-    line-height: normal; }
+  .scheme-contrller .img_ctrl {
+    min-height: 3.15rem;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center; }
+    .scheme-contrller .img_ctrl img {
+      width: 100%;
+      border: none;
+      line-height: normal; }
   .scheme-contrller .scheme_word {
     padding: 20px 20px 30px 20px;
     font-size: 13px;
@@ -140,8 +153,8 @@
     .scheme-contrller .main-contrller .main_word .main_top {
       font-size: 15px;
       margin-bottom: 5px; }
-      .scheme-contrller .main-contrller .main_word .main_top img {
-        width: 13.5px;
+      .scheme-contrller .main-contrller .main_word .main_top i {
+        font-size: 18px;
         margin-right: 5px;
         vertical-align: -1px; }
     .scheme-contrller .main-contrller .main_word .zi {
