--- a/app/partials/bz_ts.html
+++ b/app/partials/bz_ts.html
@@ -13,35 +13,35 @@
 	</div>
 	<div class="promote_main">
 		<div class="main_word" ng-click="goSelect(4)">
-			<div class="logo_ctrl"><img class="left" style="width: 30px;vertical-align: middle;" src="img/promote/feiji.png"></div>
+			<div class="logo_ctrl"><i class="iconfont" style="color: #ff6652;">&#xe625;</i></div>
 			<div class="main_l left">
 				<div class="main_head">意外保障</div>
 				<div class="change_word">造成的损失大，建议优先提升</div>
 			</div>
 		</div>
 		<div class="main_word" ng-click="goSelect(3)">
-			<div class="logo_ctrl"><img class="left" style="width: 30px;vertical-align: middle;" src="img/promote/zhong.png"></div>
+			<div class="logo_ctrl iconfont"><i class="iconfont" style="color: #54e5a3;">&#xe61a;</i></div>
 			<div class="main_l left">
 				<div class="main_head">人寿保障</div>
 				<div class="change_word">保障身故损失，建议提升</div>
 			</div>
 		</div>
 		<div class="main_word" ng-click="goSelect(2)">
-			<div class="logo_ctrl"><img class="left" style="width: 30px;vertical-align: middle;" src="img/promote/yiliao.png"></div>
+			<div class="logo_ctrl"><i class="iconfont" style="color: #5ab7ff;">&#xe60e;</i></div>
 			<div class="main_l left">
 				<div class="main_head">健康保障</div>
 				<div class="change_word">先保重疾，再补充医疗报销</div>
 			</div>
 		</div>
 		<div class="main_word" ng-click="goContinue(1)">
-			<div class="logo_ctrl"><img class="left" style="width: 30px;vertical-align: middle;" src="img/promote/ren.png"></div>
+			<div class="logo_ctrl iconfont"><i class="iconfont" style="color: #df85ef;">&#xe60c;</i></div>
 			<div class="main_l left">
 				<div class="main_head">家庭保障</div>
 				<div class="change_word">先保收入支柱，再保老人小孩</div>
 			</div>
 		</div>
 		<div class="main_word" ng-click="goContinue(2)">
-			<div class="logo_ctrl"><img class="left" style="width: 30px;vertical-align: middle;" src="img/promote/money.png"></div>
+			<div class="logo_ctrl iconfont"><i class="iconfont" style="color: #f1de92;">&#xe605;</i></div>
 			<div class="main_l left">
 				<div class="main_head">财产保障</div>
 				<div class="change_word">优先保障价值大的财产</div>
