hobby/对勾禁止点击

--- a/app/partials/hobby.html
+++ b/app/partials/hobby.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="css/preference.css?rev=43173db722f6532dfa2a6d7925eefa69">
-<!-- <link rel="stylesheet" href="css/preference.css?rev=43173db722f6532dfa2a6d7925eefa69"> -->
+<link rel="stylesheet" href="css/preference.css?rev=c3ae0dcb6140ada1cb6b2974c4606e72">
+<!-- <link rel="stylesheet" href="css/preference.css?rev=c3ae0dcb6140ada1cb6b2974c4606e72"> -->
 <div class="hobby">
 	<div class="piont">保障偏好</div>
 	<label class="switch needsclick">
@@ -14,7 +14,7 @@
 		<!-- data-ng-init="init()" -->
 		<div class="btn_ctrl" ng-repeat="item in data" >
 			<div class="hobby_btn" data-main="{{item.id}}" ng-click="setId($event)">
-				<img src="img/promote/gou.png" >{{item.name}}
+				<img class="promoteImg" src="img/promote/gou.png" >{{item.name}}
 			</div>
 		</div>
 	</div>
