--- a/app/partials/scheme.html
+++ b/app/partials/scheme.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/scheme.css?rev=rereyr">
+<link rel="stylesheet" href="css/scheme.css?rev=e0ee938ee7d46e6d7c2d469e91844ff1">
 <div class="scheme-contrller" data-ng-init="init()"  cg-busy="schemaPromise">
 	
 	<div class="main-contrller">
