--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -257,6 +257,7 @@ body {
 	// overflow-y: scroll; //显示纵向滚动条 
 	padding: 0;
 	-webkit-overflow-scrolling: touch;
+	word-break:break-all;
 }
 #stopPro {
 	border: 30px solid #fff;
