--- a/app/css/scheme.css
+++ b/app/css/scheme.css
@@ -131,7 +131,7 @@
       top: 0;
       left: 0;
       content: "\0020";
-      border-color: #e2e2e2;
+      border-color: #ccc;
       border-style: solid;
       border-width: 0 0 1px 0;
       -webkit-box-sizing: border-box;
