--- a/app/css/solution.css
+++ b/app/css/solution.css
@@ -266,6 +266,7 @@ body {
   max-height: 325px;
   overflow: auto;
   padding: 0;
-  -webkit-overflow-scrolling: touch; }
+  -webkit-overflow-scrolling: touch;
+  word-break: break-all; }
 #stopPro {
   border: 30px solid #fff; }
