--- a/app/sass/scheme.scss
+++ b/app/sass/scheme.scss
@@ -50,7 +50,7 @@
 		.main_word {
 			padding: 20px 30px;
 			background: #fff;
-			@include border(0 0 1px 0,#e2e2e2);
+			@include border(0 0 1px 0,#ccc);
 			.main_top {
 				font-size: 15px;
 				margin-bottom: 5px;
