--- a/app/partials/scheme.html
+++ b/app/partials/scheme.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/scheme.css?rev=rereyr">
+<link rel="stylesheet" href="css/scheme.css?rev=9d647142b5fd1e4a75229b6cf2ebce9e">
 <div class="scheme-contrller" data-ng-init="init()"  cg-busy="schemaPromise">
 	
 	<div class="main-contrller">
