--- a/app/partials/userinfo.html
+++ b/app/partials/userinfo.html
@@ -20,8 +20,7 @@
 <a href="javascript:void(0)" class="btn btn_n_primary btn_dark_primary btn_no_radius" ng-click="submit()"   id="submitButton">开始</a>
 </div>
 </div>
-
-<script type="text/javascript" src="js/agecommon.js?rev=asafafaasdfafasfwsdasafafa"></script>
+<!-- <script type="text/javascript" src="js/agecommon.js?rev=asafafaasdfafasfwsdasafafa"></script> -->
 <script type="text/javascript">
 
  var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:18,changeCallback:function(age){
