--- a/app/partials/service.html
+++ b/app/partials/service.html
@@ -8,17 +8,17 @@
 </div>
 
 <div class="service-container">
-	<div class="service-item"  ng-click="goBaoDan()"> <div><div class="icon"><i class="iconfont"  style="color:#ff6155;">&#xe612;</i></div><div class="text">我的保单</div></div></div>
-	<div class="service-item"  ng-click="goTradeRecord()"><div><div class="icon"><i class="iconfont"  style="color:#37adff;">&#xe613;</i></div><div class="text">投保记录</div></div></div>
 	<div class="service-item"  ng-click="goInsuranceCard()"><div><div class="icon"><i class="iconfont"  style="color:#ff6155;">&#xe614;</i></div><div class="text">我的优惠劵</div></div></div>
-	
+	<div class="service-item"  ng-click="goTradeRecord()"><div><div class="icon"><i class="iconfont"  style="color:#37adff;">&#xe613;</i></div><div class="text">交易记录</div></div></div>
+	<div class="service-item"  ng-click="goBaoDan()"> <div><div class="icon"><i class="iconfont"  style="color:#ff6155;">&#xe612;</i></div><div class="text">我的保单</div></div></div>
 </div>
 
 
 <div class="service-container">
+	<div class="service-item"><div style="text-align: center;"><div class="icon"><i class="iconfont"  style="color:#ff6155;">&#xe626;</i></div><div class="text">我的收藏</div></div></div>
 	<div class="service-item"  ng-click="goContact()">  <div><div class="icon"><i class="iconfont"  style="color:#00be7d;">&#xe615;</i></div><div class="text">联系我们</div></div></div>
 	<div class="service-item" ng-click="goNuobei()"><div style="text-align: center;"><div class="icon"><i class="iconfont"  style="color:#37adff;">&#xe616;</i></div><div class="text">关于诺贝</div></div></div>
-	<div class="service-item">  <div></div></div>
+	
 </div>
 
 	<a href="tel:4009920205"><div class="phone-container"><i class="iconfont">&#xe61e;</i>  客服电话 400-992-0205 </div></a>
