--- a/app/partials/hobby.html
+++ b/app/partials/hobby.html
@@ -7,7 +7,7 @@
 		<span class="switch-label needsclick" data-on="基础" data-off="高端"></span> 
 		<span class="switch-handle needsclick"></span> 
 	</label>
-	<div class="select">性价比高 重点保障损失较大的风险</div>
+	<!-- <div class="select">性价比高 重点保障损失较大的风险</div> -->
 	<div class="trouble">您还担心的问题</div>
 	<div class="select">可多选 或不选</div>
 	<div class="relation" id="relation"  data-ng-init="init()"   cg-busy="hobbyPromise" >
