--- a/app/partials/userinfo_new.html
+++ b/app/partials/userinfo_new.html
@@ -16,7 +16,7 @@
 	</label>
 	<div class="age">年 龄<span class="blue" id="ageId" style="font-size: 18px;">0</span><span class="blue" style="margin:0;padding:0;">岁</span></div>
 	<div id="ageContainer"></div>
-	<div class="age">年收入<span class="blue" id="yearIncomeId" style="font-size: 18px;">0</span><span class="blue" style="margin:0;padding:0;">万</span></div>
+	<div class="age">年收入<span class="blue" id="yearIncomeId" style="font-size: 18px;">0</span><span class="blue" id="sui" style="margin:0;padding:0;">万</span></div>
     <div id="yearIncome"></div>
 </div>
 <div class="target_btn" ng-click="goHobby()">下一步</div>
