偏好设定(根据用户在资料设定页选择的年龄对应)

--- a/app/partials/collection.html
+++ b/app/partials/collection.html
@@ -5,8 +5,18 @@
 		<div class="icon"><i class="iconfont">&#xe625;</i></div>
 		<div class="plan-main">
 			<div>意外保障8分方案</div>
-			<div>方案保额：55万</div>
-			<div>保费：30495元</div>
+			<div class="plan-gray">方案保额：<span>55</span>万</div>
+			<div>保费: <span>30495</span>元</div>
+			<i class="iconfont jian">&#xe60f;</i>
+		</div>
+	</div>
+	<div class="plan">
+		<div class="icon"><i class="iconfont">&#xe625;</i></div>
+		<div class="plan-main">
+			<div>意外保障8分方案</div>
+			<div class="plan-gray">方案保额：<span>55</span>万</div>
+			<div>保费: <span>30495</span>元</div>
+			<i class="iconfont jian">&#xe60f;</i>
 		</div>
 	</div>
 </div>
