--- a/app/css/collection.css
+++ b/app/css/collection.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+body {
+  background: #f5f5f5; }
 .collection-ctrl {
   width: 100%;
   height: 100%;
@@ -9,21 +11,73 @@
     display: -moz-box;
     display: -ms-flexbox;
     display: flex;
-    padding: 15px; }
+    padding: 15px;
+    position: relative;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    background: #fff; }
+    .collection-ctrl .plan::after {
+      pointer-events: none;
+      position: absolute;
+      z-index: 999;
+      top: 0;
+      left: 0;
+      content: "\0020";
+      border-color: #ccc;
+      border-style: solid;
+      border-width: 0 0 1px 0;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      -webkit-transform-origin: 0 0;
+      transform-origin: 0 0; }
+      @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+        .collection-ctrl .plan::after {
+          width: 200%;
+          height: 200%;
+          -webkit-transform: scale(0.5);
+          transform: scale(0.5); } }
+      @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+        .collection-ctrl .plan::after {
+          width: 200%;
+          height: 200%;
+          -webkit-transform: scale(1/3);
+          transform: scale(1/3); } }
     .collection-ctrl .plan .icon {
       width: 30px;
       height: 58px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex;
       -webkit-box-align: center;
       -webkit-align-items: center;
       align-items: center; }
       .collection-ctrl .plan .icon i {
-        font-size: 30px;
+        font-size: 35px;
         color: #ff6652;
         display: block; }
+    .collection-ctrl .plan .plan-main > div {
+      line-height: 15px; }
+    .collection-ctrl .plan .jian {
+      position: absolute;
+      right: 0;
+      top: 22px;
+      font-size: 14px;
+      color: #ccc; }
     .collection-ctrl .plan .plan-main {
+      position: relative;
+      padding-left: 15px;
       -webkit-box-flex: 1;
       -webkit-flex: 1;
       -moz-box-flex: 1;
       -ms-flex: 1;
       flex: 1;
-       }
+      color: #555;
+      font-size: 15px;
+      line-height: normal; }
+      .collection-ctrl .plan .plan-main .plan-gray {
+        color: #999;
+        font-size: 12px;
+        line-height: 12px;
+        padding: 7px 0 10px; }
