--- a/app/sass/collection.scss
+++ b/app/sass/collection.scss
@@ -1,26 +1,53 @@
 @import "base/classes.scss";
 @import "base/variables.scss";
+body { background: #f5f5f5;}
 .collection-ctrl {
 	width: 100%;
 	height: 100%;
 	line-height: normal;
-	// background: #f5f5f5;
 	.plan {
 		// height: 88px;
 		@include flexbox;
 		padding: 15px;
+		@include border(0 0 1px 0,#ccc);
+		margin-bottom: 10px;
+		box-sizing: border-box;
+		background: #fff;
+
 		.icon {
 			width: 30px;
 			height: 58px;
+			@include flexbox;
 			@include align-items(center);
 			i {
-				font-size: 30px;
+				font-size: 35px;
 				color: #ff6652;
 				display: block;
 			}
 		}
+		.plan-main>div {
+			line-height: 15px;
+		}
+		.jian {
+			position: absolute;
+			right: 0;
+			top: 22px;
+			font-size: 14px;
+			color: #ccc;
+		}
 		.plan-main {
+			position: relative;
+			padding-left: 15px; 
 			@include flex(1);
+			color: #555;
+		    font-size: 15px;
+		    line-height: normal;
+		    .plan-gray {
+		    	color: #999;
+		    	font-size: 12px;
+	    	  	line-height: 12px;
+	    	  	padding: 7px 0 10px;
+		    }
 		}
 	}
 }
