simple auto commit

--- a/app/partials/newindex_part.html
+++ b/app/partials/newindex_part.html
@@ -3,13 +3,34 @@
 
 
   <div class="dash">
-  <canvas id="dash_container" >
+  <canvas id="dash_bg_container" >
    
   </canvas>
+  <canvas  id="dash_container" style="position: absolute; left: 0px; top: 35px; background: transparent;" ></canvas>
   </div>
  
 
+  <div class="navigation">
+    <div class="navigation__leftbtn"></div>
+    <div class="navigation__name">
+      <div>本人 杨先生</div> 
+      <!-- <div></div>  -->
+    </div>
+    <div class="navigation__rightbtn"></div>
+  </div>
 
+
+  <div class="pannel-container">
+    <div class="pannel"> 
+      <div class="pannel__nav">
+          <div class="pannel__nav__item pannel__nav__item_left">已有保障</div> 
+          <div class="pannel__nav__item">提升保障</div> 
+      </div>
+      <div class="pannel__body">
+        <div class="pannel__body__item"></div> 
+      </div> 
+    </div>
+  </div>
 
 
 <script type="text/javascript" src="js/dashboard.js"></script>
