--- a/app/sass/newindex_part.scss
+++ b/app/sass/newindex_part.scss
@@ -2,15 +2,67 @@
 * @Author: fanzhang
 * @Date:   2016-08-15 18:53:28
 * @Last Modified by:   fanzhang
-* @Last Modified time: 2016-08-15 20:43:31
+* @Last Modified time: 2016-08-16 21:33:59
 */
+@import "base/classes.scss";
+@import "base/variables.scss";
 .wrapper {
   padding: 0;
   position: relative;
+  background-color: #4285f4;
 }
 
 .dash{
 	// padding:10px 35px;
 	padding-top:35px;
 	background-color: #4285f4;
+	position:relative;
 }
+.navigation{
+	width:250px;
+	color:#90baff;
+	margin:0 auto;
+	text-align:center;
+	@include flexbox;
+}
+.navigation__leftbtn{
+	@include flex(1);
+}
+.navigation__name{
+	@include flex(1);
+}
+.navigation__rightbtn{
+	@include flex(1);
+}
+.pannel-container{
+	padding:10px;
+}
+.pannel{
+	padding:7px 15px;
+	border-radius:2px; 
+	background-color: #FFF;
+}
+.pannel__nav{
+	@include border(0 0 1px 0,#b5b5b5);
+	@include flexbox;
+}
+.pannel__nav__item{
+	@include flex(1);
+	text-align:center;
+	position:relative;
+	@include border(0 1px 0 0,#b5b5b5);
+}
+.pannel__nav__item_left:after{
+	position:absolute;
+	height:80px;
+	width:1px;
+	right:0;
+	color:#b5b5b5;
+}
+// .pannel__nav__item_hover:after{
+// 	position:absolute;
+// 	bottom:0;
+// 	width:100px;
+// 	height:3px;
+// 	background-color: #4285f4;
+// }
