simple auto commit

--- a/app/partials/newindex_part.html
+++ b/app/partials/newindex_part.html
@@ -56,7 +56,7 @@
 
           <div class="pannel__body__item pannel__body__item_title">
             建议提升至8.0分 
-            <div class="pannel__body__item_btn"><i class="iconfont arrow_size" style="color:#4285f4;font-size:19px;" >&#xe62c;</i>一键提升</div>
+            <div class="pannel__body__item_btn" ng-click="goAutoPromote()"><i class="iconfont arrow_size" style="color:#4285f4;font-size:19px;" >&#xe62c;</i>一键提升</div>
           </div>
          <div class="pannel__body__item"   ng-click="goPromote(4)">
           <i class="iconfont icon_size" >&#xe629;</i>
